syntax = "proto3";

package temporal.server.api.dynamicconfig.v1;
option go_package = "go.temporal.io/server/api/dynamicconfig/v1;dynamicconfig";

import "google/protobuf/struct.proto";

message Constraints {
	string namespace = 1;
	string namespace_id = 2;
	string task_queue_name = 3;
	int32 task_queue_type = 4;
	int32 shard_id = 5;
	int32 task_type = 6;
	string destination = 7;
}

message ConstrainedValue {
  Constraints constraints = 1;
  google.protobuf.Value value = 2;
}

message ConstrainedValues {
  repeated ConstrainedValue items = 1;
}